@@ -10,6 +10,11 @@
 
 ** This is CRAN version, it includes version 1.2.9.-1.-3. **
 
+Besides, following updates are included:
+
+MINOR UPDATES
+  o Reference to a new paper on ShinyItemAnalysis in The R journal was added.
+
 -------------------------------------------------------
 - Changes in ShinyItemAnalysis 1.2.9-3. (2019-01-30) -
 -------------------------------------------------------
